force-app/main/default/objects/Accessory__c/Accessory__c.object-meta.xml
<CustomObject>
    <description>Establishes relationships between items</description>
    <label>Accessory</label>
    <nameField>
        <displayFormat>ACC-{000000}</displayFormat>
        <label>Accessory Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Accessories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>