force-app/main/default/objects/Accessory__c/fields/Accessory_Item__c.field-meta.xml
<CustomField>
    <fullName>Accessory_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Accessory Item</label>
    <referenceTo>PDLM__Item__c</referenceTo>
    <relationshipLabel>Accessories (Accessory Item)</relationshipLabel>
    <relationshipName>Accessories1</relationshipName>
    <type>Lookup</type>
</CustomField>