force-app/main/default/objects/Accessory__c/fields/Accessory_Item_Temp__c.field-meta.xml
<CustomField>
    <fullName>Accessory_Item_Temp__c</fullName>
    <inlineHelpText>Temporary field to be replaced by lookup</inlineHelpText>
    <label>Accessory Item - Temp</label>
    <length>50</length>
    <type>Text</type>
</CustomField>