force-app/main/default/objects/Accessory__c/fields/Alternate_Code__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Code__c</fullName>
    <label>Alternate Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>