force-app/main/default/objects/Accessory__c/fields/Main_Item__c.field-meta.xml
<CustomField>
    <fullName>Main_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Main Item</label>
    <referenceTo>PDLM__Item__c</referenceTo>
    <relationshipLabel>Accessories</relationshipLabel>
    <relationshipName>Accessories</relationshipName>
    <type>Lookup</type>
</CustomField>