force-app/main/default/objects/Accessory__c/fields/SKU__c.field-meta.xml
<CustomField>
    <fullName>SKU__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SKU</label>
    <referenceTo>PDLM__SKU__c</referenceTo>
    <relationshipLabel>Accessories</relationshipLabel>
    <relationshipName>Accessories</relationshipName>
    <type>Lookup</type>
</CustomField>