force-app/main/default/objects/Accessory__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Type__c</columns>
    <columns>Main_Item__c</columns>
    <columns>Accessory_Item__c</columns>
    <columns>Alternate_Code__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>